<resources>
    <string name="app_name">Gravity</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_logo">App logo</string>
    <string name="on_boarding_image">On Boarding Image</string>
    <string name="Title1">Welcome to Gravity</string>
    <string name="Title2">Personalization</string>
    <string name="Title3">You\'re Not Alone</string>
    <string name="Title4">Dieting Made Simple</string>
    <string name="Title5">Access Resources</string>
    <string name="Title6">Help at Hand</string>
    <string name="Title7">Let\'s Go!</string>
    <string name="desc1">Welcome to Gravity, your personal guide to holistic well-being. Experience personalized support, connect with a vibrant community, and embark on your journey to better health and vitality.</string>
    <string name="desc2"> Gravity tailors your experience to your unique needs and preferences. From personalized nutrition plans to customized exercise routines, we\'re here to help you achieve your health goals, your way.</string>
    <string name="desc3"> Join our supportive community of like-minded individuals on Gravity. Share your experiences, find motivation, and build lasting friendships as you work towards a healthier, happier you.</string>
    <string name="desc4">Say goodbye to fad diets and restrictive meal plans. Gravity offers practical nutrition guidance and meal ideas to help you make sustainable, healthy choices that fit your lifestyle.</string>
    <string name="desc5">Explore a wealth of resources at your fingertips with Gravity. From informative articles to expert advice, discover everything you need to empower your health journey.</string>
    <string name="desc6">Need assistance or guidance? Our dedicated team of health professionals is here for you. Chat with a live expert, ask questions, and get the support you need in real-time.</string>
    <string name="desc7">Ready to take control of your health and well-being? Let\'s get started! Join Gravity today and unlock a world of possibilities for a healthier, happier life.</string>
    <string name="get_started">Get Started</string>
    <string name="height_cm">Height (cm)</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="signup">Signup</string>
    <string name="already_logged_in_sign_in">Already logged in? Sign in</string>
    <string name="already_registered_sign_in">Already Registered? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="success">Success</string>
    <string name="welcome_Message">Welcome to Gravity</string>
    <string name="hello">Hello </string>
    <string name="quote_of_the_day">Inspiration of the Day:</string>
    <string name="your_metrics_for_today">Your Metrics for Today</string>
    <string name="edit"> <u>Edit</u></string>
    <string name="water">Water</string>
    <string name="calories">Calories</string>
    <string name="exercise">Exercise</string>
    <string name="steps">Steps</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="body_fat">Body Fat</string>
    <string name="body_measurements">Body Measurements</string>
    <string name="home">Home</string>
    <string name="live_help">Live Help</string>
    <string name="community">Community</string>
    <string name="night_mode">Night Mode</string>
    <string name="logout">Logout</string>
    <string name="statistics">Statistics</string>
    <string name="profile_image">profile image</string>
    <string name="menu">Menu</string>
    <string name="update">Update</string>
    <string name="daily_metrics">Daily Metrics</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="target_weight">Target Weight</string>
    <string name="information">Information</string>
    <string name="kg">KG</string>
    <string name="diet">Diet</string>
    <string name="commenticon">commentIcon</string>
    <string name="no_posts_yet">No Posts Yet</string>
    <string name="enter_your_post">Enter your post</string>
    <string name="get_live_help">Get Live Help</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="help_subject">Help Subject</string>
    <string name="insights">Insights</string>
    <string name="weekly_points">Weekly Points</string>
    <string name="recommended_meals">Your Meal Recommendations</string>
    <string name="meal_image">meal Image</string>
    <string name="nutrition_data">Nutrition Data</string>
    <string name="extra_info">Extra Info</string>
    <string name="kcal">Kcal</string>
    <string name="fat">Fat</string>
    <string name="carb">Carb</string>
    <string name="sign_out">Sign out</string>
    <string name="subject">Subject:</string>
    <string name="helpful_resources"> <u>Helpful Resources</u></string>

</resources>