<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LiveHelp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/get_live_help"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Get Help from a Human Representative "/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/subject"/>
            <EditText
                android:layout_width="0dp"
                android:id="@+id/subject"
                android:hint="@string/help_subject"
                android:layout_height="48dp"
                android:inputType="text"
                android:background="@drawable/tile4"
                android:layout_weight="3"
                android:paddingHorizontal="15dp"
                android:autofillHints="" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/tile4"
            android:gravity="top"
            android:id="@+id/mailBody"
            android:hint="@string/write_your_message_here"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:autofillHints="" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send"
            android:id="@+id/sendEmail"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:paddingHorizontal="90dp"/>

    </LinearLayout>

    <!--  BottomNavigationView -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="-17dp"
        app:itemBackground="@color/white"
        app:itemIconSize="24dp"
        app:itemPaddingBottom="20dp"
        app:menu="@menu/bottom_nav" />

</androidx.appcompat.widget.LinearLayoutCompat>
