<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingSurvey">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/previousET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/previous"
            android:layout_marginStart="30dp"
            android:visibility="gone"
            android:gravity="start"/>

        <TextView
            android:id="@+id/skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="30dp"/>
    </LinearLayout>



    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:textSize="27sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_gravity="center"
        tools:text="Understanding Your Lifestyle Habits:" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionTV"
        android:layout_gravity="center"
        tools:text = "How often do you engage in physical activity?"
        android:textSize="17sp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textStyle="normal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_gravity="center"
        android:id="@+id/buttonsLayout"
        android:gravity="center_horizontal">

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text= "1 of 9"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:id="@+id/questionIndex"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">


        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:paddingHorizontal="45dp"
            android:text="@string/submit"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>